--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flex_color_scheme: ^7.0.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
